--- a/test-petal0.yaml
+++ b/test-petal0.yaml
@@ -8,7 +8,7 @@ petal: 0
 # 3 choices :
 #  "guide_spikes" BMR plate mounted on the petal guide spikes for petal insertion procedure
 #  "light_weight_red_leg" # BMR plate mounted at the tip of the red
-#  ""heavy_weight_red_leg" # BMR plate mounted at the tip of the red with a weight matching that of a petal
+#  "heavy_weight_red_leg" # BMR plate mounted at the tip of the red with a weight matching that of a petal
 
 bmr_type: "guide_spikes"
 
@@ -16,17 +16,17 @@ bmr_type: "guide_spikes"
 # Are we going to correct for PMA axis misalignment ( 0 or 1 )
 correct_pma_misalignement: 1
 
-# Coordinates of fixed point on the PMA when the PMA is (partially) engaged
+# Coordinates in CS5 of a fixed point on the PMA when the PMA is (partially) engaged
 # (i.e. close to the FPA)
 # Coordinates X,Y,Z (inch)
 partially_engaged_pma_coords_inch: 0,0,-10
 
-# Coordinates of the same fixed point on the PMA when the PMA is retracted
+# Coordinates in CS5  of the same fixed point on the PMA when the PMA is retracted
 # (i.e. far from the FPA)
 # Coordinates X,Y,Z (inch)
 retracted_pma_coords_inch: 0,0,-150
 
-# Z coordinates of the same fixed point on the PMA when the PMA is full engaged
+# Z coordinate in CS5  of the same fixed point on the PMA when the PMA is full engaged
 # This has to be pre-computed once a fixed point is chosen
 fully_engaged_pma_z_coord_inch: -5
 
