--- a/example-config.yaml
+++ b/example-config.yaml
@@ -40,11 +40,11 @@ correct_pma_leg_rotation: 1
 
 correct_lower_struts_length: 1
 
-# save moves in output csv file
+# uncomment this to save the moves in an output csv table file
 
-outfile: example-moves.csv
+# outfile: example-moves.csv
 
-# plot results
+# plot results (0=no or 1=yes)
 
 plot: 0
 
@@ -58,7 +58,7 @@ B2: 1.7538 , 16.0473 , -64.0017
 B3: 3.9335 , 17.8724 , -63.9971
 B4: -2.3009 , 19.6984 , -64.0030
 
-# Use the following ONLY to impose
+# Uncomment the following ONLY to impose
 # a shift of the PMA based on the
 # visual inspection of the linear bearing
 # alignment to the rail.
@@ -74,9 +74,8 @@ B4: -2.3009 , 19.6984 , -64.0030
 #FORCED_DY_PMA_MM: 1.
 
 # Optional, rail measurements
-# because there can be a different number of points
-# I store them as an array per coordinate
-# X,Y,Z of points along the rail in CS5 and inches (variable number)
+# X,Y,Z of points along the rail in CS5 and inches
+# (one row per point)
 RAIL1: 0.1588,19.6727,-85.0901
 RAIL2: 0.1570,19.6663,-80.9223
 RAIL3: 0.1600,19.6575,-75.4784
